# fractali-fc

./: CLCompositor.cpp  CLCompositor.h  CMakeCache.txt  CMakeLists.txt  CPPCompositor.cpp  CPPCompositor.h  CPPDoublePendulum.cpp  CPPDoublePendulum.h  Compositor.cpp  Compositor.h  Makefile  PFract  README  README.md  View.cpp  View.h  Window.cpp  Window.h  cmake_install.cmake  compile_commands.json  main.cpp  types.h
kernels/: add.cl  blur.cl  circle.cl  complex.cl  double_pendulum.cl  lesson1_kernels.cl  mandelbrot.cl
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
